--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
       <div class="grid">
 
-        <div class="grid__col">
-          <div class="grid__row">
+        <div class="grid__row">
+          <div class="grid__col col-6">
             <div class="text">
               <p>Cras ac erat tempor, scelerisque eros id, pharetra erat. Morbi eu massa suscipit elit mattis auctor. Nunc sit amet massa dictum dolor convallis maximus. Etiam nec aliquam quam. Nulla convallis ornare semper. Aenean at rhoncus lectus. Vestibulum nisi lorem, eleifend a eros bibendum, tincidunt ultrices velit. Proin auctor sagittis neque, et commodo sem dignissim vitae. Praesent euismod elit ante, quis vulputate massa ultrices eu. In sagittis ultrices nunc quis malesuada.</p>
 
@@ -23,16 +23,16 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque malesuada porta leo at vulputate. Suspendisse quis risus augue. Quisque sit amet elit at augue pulvinar eleifend finibus a risus. Ut bibendum et est at fermentum. Duis diam neque, pharetra vel dui in, mollis auctor massa. Phasellus rutrum ex eget sagittis sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam efficitur ac erat quis placerat. Mauris vulputate tincidunt enim ac porta. Pellentesque consequat leo et aliquam iaculis.</p>
             </div>
           </div>
-          <div>
+          <div class="grid__col col-6">
             <img class="image" src="palms1.jpg" alt="Afskaplega lorem-ipsum-leg pálmatré">
           </div>
         </div>
 
-        <div class="grid__col">
-          <div class="grid__row">
+        <div class="grid__row reverse">
+          <div class="grid__col col-6 to-end">
             <img class="image" src="palms2.jpg" alt="Jafnvel lorem-ipsum-legri pálmatré">
           </div>
-          <div>
+          <div class="grid__col col-6">
             <div class="text">
               <p>Nunc ornare libero sit amet felis faucibus tincidunt laoreet sed magna. Etiam volutpat augue quis sapien pharetra, efficitur semper ipsum aliquet. Duis commodo elit libero, et vestibulum tellus scelerisque eu. Sed non viverra tortor. Nulla lorem magna, pellentesque sit amet leo eu, laoreet imperdiet lorem. Fusce porttitor a est pellentesque interdum. Aenean sodales, augue vitae cursus feugiat, neque lectus malesuada leo, hendrerit ultrices dolor dui a tellus. Etiam sagittis libero magna, et pretium leo viverra non.</p>
 
@@ -45,9 +45,9 @@
       </div>
 
       <div class="cards">
-        <div class="grid__col">
-          <div class="grid__row">
-            <section class="card card__row">
+        <div class="card__row">
+          <div class="card__col">
+            <section class="card">
               <h2 class="card__title">Lorem ipsum</h2>
               <div class="card__content">
                 <div class="card__text">
@@ -57,8 +57,8 @@
             </section>
           </div>
 
-          <div class="grid__row">
-            <section class="card card__row">
+          <div class="card__col">
+            <section class="card">
               <h2 class="card__title">Aliquam erat volutpat in dignissim id sagittis nec leo</h2>
               <div class="card__content">
                 <div class="card__text">
@@ -71,8 +71,8 @@
             </section>
           </div>
 
-          <div class="grid__row">
-            <section class="card card__row">
+          <div class="card__col">
+            <section class="card">
               <h2 class="card__title">Loremipsumdolorsitametconsecteturadipiscingelit</h2>
               <div class="card__content">
                 <div class="card__text">
@@ -84,8 +84,8 @@
             </section>
           </div>
 
-          <div class="grid__row">
-            <section class="card card__row">
+          <div class="card__col">
+            <section class="card">
               <h2 class="card__title">Proin dui leo</h2>
               <div class="card__content">
                 <div class="card__text">
@@ -100,8 +100,8 @@
             </section>
           </div>
 
-          <div class="grid__row">
-            <section class="card card__row">
+          <div class="card__col">
+            <section class="card">
               <h2 class="card__title">Lorem ipsum</h2>
               <div class="card__content">
                 <div class="card__text">
@@ -115,8 +115,8 @@
             </section>
           </div>
 
-          <div class="grid__row">
-            <section class="card card__row">
+          <div class="card__col">
+            <section class="card">
               <h2 class="card__title">Lorem ipsum</h2>
               <div class="card__content">
                 <div class="card__text">
@@ -144,8 +144,8 @@
       </div>
 
       <div class="grid">
-        <div class="grid__col">
-          <div class="grid__row">
+        <div class="grid__row">
+          <div class="grid__col col-6">
             <div class="text">
               <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas fermentum id nulla in iaculis. Vivamus mollis eros non erat mollis tincidunt. Duis volutpat ultrices justo, vel euismod justo elementum nec. Praesent ornare, neque sit amet posuere facilisis, elit erat luctus magna, et vehicula nisl nunc at sem. Ut eros augue, imperdiet eget sagittis non, laoreet in massa. Pellentesque porta id urna sit amet ornare. Nulla vel augue suscipit ante rutrum ullamcorper sed id est. Nullam maximus mollis diam, quis tempus quam molestie in. Duis id purus sed purus convallis mattis. Fusce lobortis arcu a ligula sollicitudin, quis porttitor elit consequat. Nunc non efficitur sapien. Fusce vel sodales nunc.</p>
 
@@ -154,7 +154,7 @@
               <p>Maecenas ullamcorper porttitor nibh quis semper. Phasellus sed sagittis est. Sed mattis velit eros, vitae dictum ligula venenatis a. Integer eu elit vestibulum, porta urna eu, tristique sapien. Vivamus orci justo, tempus a efficitur at, hendrerit sed risus. Fusce sollicitudin, magna ut interdum ultricies, velit lorem vulputate felis, ut gravida quam lectus et leo. Nullam imperdiet metus non urna consectetur gravida. Phasellus in bibendum tortor. Suspendisse id lacinia lorem. Nullam eget turpis imperdiet, hendrerit tortor eu, ullamcorper arcu. Etiam nec volutpat neque, quis sagittis magna. Donec ante enim, tempus in nulla eget, varius elementum augue. Mauris gravida vehicula dolor, vel varius augue posuere vel.</p>
             </div>
           </div>
-          <div class="grid__row">
+          <div class="grid__col col-6">
             <img class="image" src="palms3.jpg" alt="lorem-ipsum-legustu pálmatrén">
           </div>
         </div>
