lokið við útlit skv. lýsingu.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="grid__row reverse">
-          <div class="grid__col col-6 to-end">
+          <div class="grid__col col-6">
             <img class="image" src="palms2.jpg" alt="Jafnvel lorem-ipsum-legri pálmatré">
           </div>
           <div class="grid__col col-6">
