fixed class names for cards

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       </div>
 
       <div class="cards">
-        <div class="card__row">
-          <div class="card__col">
+        <div class="cards__row">
+          <div class="cards__col">
             <section class="card">
               <h2 class="card__title">Lorem ipsum</h2>
               <div class="card__content">
@@ -57,7 +57,7 @@
             </section>
           </div>
 
-          <div class="card__col">
+          <div class="cards__col">
             <section class="card">
               <h2 class="card__title">Aliquam erat volutpat in dignissim id sagittis nec leo</h2>
               <div class="card__content">
@@ -71,7 +71,7 @@
             </section>
           </div>
 
-          <div class="card__col">
+          <div class="cards__col">
             <section class="card">
               <h2 class="card__title">Loremipsumdolorsitametconsecteturadipiscingelit</h2>
               <div class="card__content">
@@ -84,7 +84,7 @@
             </section>
           </div>
 
-          <div class="card__col">
+          <div class="cards__col">
             <section class="card">
               <h2 class="card__title">Proin dui leo</h2>
               <div class="card__content">
@@ -100,7 +100,7 @@
             </section>
           </div>
 
-          <div class="card__col">
+          <div class="cards__col">
             <section class="card">
               <h2 class="card__title">Lorem ipsum</h2>
               <div class="card__content">
@@ -115,7 +115,7 @@
             </section>
           </div>
 
-          <div class="card__col">
+          <div class="cards__col">
             <section class="card">
               <h2 class="card__title">Lorem ipsum</h2>
               <div class="card__content">
